# build-up-phase

./: .gitignore  .gitmodules  README.md  dx12-basic-triangle.sh  glfw.sh  init.sh  vulkan-basic-triangle.sh  vulkan-raytraced-triangle.sh  vulkan-raytracing-basic.sh  vulkan-uniform-buffer-teapot-normal-phong 에서 2개의 uniform 버퍼를 시도한 main.cpp
A3/: A3.sln
A3/A3/: A3.vcxproj  A3.vcxproj.filters  Addon_imgui.cpp  Addon_imgui.h  CameraObject.h  Engine.cpp  Engine.h  EngineTypes.h  Main.cpp  MeshObject.h  MeshResource.h  MeshUtility.cpp  PathTracingRenderer.cpp  PathTracingRenderer.h  RenderSettings.h  Scene.cpp  Scene.h  SceneObject.h  Utility.h  Vulkan.cpp  Vulkan.h  imgui.ini  tiny_obj_loader.h
Juhwan/: main.cpp  main_1.cpp  main_2.cpp  vulkan-basic-teapot 에서 obj 까지 한 main.cpp
Juhwan/Seohyuk/: CMDUtility.cpp  CMakeLists.txt  README_KOREAN.md  shader_module.h
Juhwan/uniform_sampling/: main.cpp  uniform_sampling.sln  uniform_sampling.vcxproj
Juhwan/vulkan-basic-rectangle/: .gitignore
Juhwan/vulkan-basic-triangle/: main.cpp
Juhwan/vulkan-compute-shader/: .gitignore  main.cpp
Juhwan/vulkan-raytraced-teapot/: CMakeLists.txt  main.cpp
Juhwan/vulkan-raytraced-teapot-OBJ-to-Acceleration-structure/: CMakeLists.txt  README.md
Juhwan/vulkan-raytraced-teapot-OBJ-with-normal-rendering/: main.cpp
Juhwan/vulkan-raytraced-triangle/: CMakeLists.txt  (+1 more)
Juhwan/vulkan-raytraced-triangle-20250214/: shader_module.h
Quiz6/: Quiz6.sln  Quiz6.vcxproj  main.cpp
Seohyuk/: CMDUtility.cpp  CMakeLists.txt  GlobalMainProgram.cpp  GlobalMainProgram.h  README.md  README_KOREAN.md  SimpleCommandUtility.cpp  TeapotBasic.cpp  seokyuk.h  teapot_OBJ_with_normal_rendering.cpp  triangle.cpp
Seohyuk/ExternalProjects/: CMakeLists.txt
Seohyuk/MainProject/: CMakeLists.txt
Seohyuk/MainProject/Product/: CMakeLists.txt
Seohyuk/MainProject/Product/TeapotBasic/: TeapotBasic.cpp
Seohyuk/MainProject/include/: tiny_obj_loader.h
Seohyuk/SupportProjects/: CMakeLists.txt
Seohyuk/SupportProjects/NeftyRenderTools/: CMakeLists.txt  NeftyRenderTools.cpp
Seohyuk/SupportProjects/NeftyRenderTools/Test/: TestCompilable.cpp
Seohyuk/SupportProjects/NeftyRenderTools/include/: vk_nutshell.h
Seohyuk/SupportProjects/NeftyThinWindows/: CMakeLists.txt  README.md
Seohyuk/SupportProjects/NeftyThinWindows/include/: extra_thin.h
Seohyuk/SupportProjects/NeftyThinWindows/src/: CMakeLists.txt  windowCreation.c
Seohyuk/SupportProjects/NeftyThinWindows/test/: TestWindowShow.c
Seohyuk/SupportProjects/VkNeftyRenderTools/Test/: TestCompilable.cpp
Seohyuk/SupportProjects/VkNeftyRenderTools/include/: vulkan_utility.h
Seohyuk/TeapotBasic/: CMakeLists.txt  TeapotBasic.cpp
Seohyuk/include/: seohyuk.h  vk_nutshell.h  vulkan_utility.h
Seohyuk/simple_platform/: CMakeLists.txt  platform.c  platform.cpp  platform.h
Seohyuk/simple_platform/MacOSPlatform/: CocoaPlatform.h  CocoaPlatform.m
Seohyuk/simple_platform/MacOSPlatform/MacOSPlatform/: MacOSPlatform.h  MacOSPlatform.m
Seohyuk/simple_platform/MacOSPlatform/MacOSPlatform.xcodeproj/: project.pbxproj
Seohyuk/simple_platform/MacOSPlatform/MacOSPlatform.xcodeproj/project.xcworkspace/xcuserdata/songseohyeog.xcuserdatad/: UserInterfaceState.xcuserstate
Seohyuk/simple_platform/MacOSPlatform/MacOSPlatform.xcodeproj/xcuserdata/songseohyeog.xcuserdatad/xcschemes/: xcschememanagement.plist
Seohyuk/simple_platform/MacOSPlatform/TestCocoaPlatform/: main.cpp
Seohyuk/simple_platform/MacOSPlatform/test_window/: main.cpp
Seohyuk/simple_platform/test/: test.c
Seohyuk/sub_repo/: CMakeLists.txt
Seohyuk/test/: TestVulkanUtility.cpp
YeongHo/: README.md
dx12-basic-triangle/: CMakeLists.txt  README.md  main.cpp
read-OBJ-file/: read-OBJ-file.sln
vulkan-basic-rectangle/: glsl2spv.h  main.cpp  vertex_input_fs.frag  vertex_input_fs.frag.spv  vertex_input_fs.glsl  vertex_input_fs.spv  vertex_input_vs.glsl  vertex_input_vs.spv  vertex_input_vs.vert  vertex_input_vs.vert.spv  vulkan-basic-triangle.vcxproj
vulkan-basic-rectangle_me/: main.cpp
vulkan-basic-teapot/: main.cpp  vertex_input_vs.glsl
vulkan-basic-triangle/: .gitignore  CMakeLists.txt  README.md  main.cpp  shader_module.h  simple_fs.glsl  simple_vs.glsl  simple_vs.spv  vulkan-basic-triangle.vcxproj
vulkan-compute-shader/: README.md  main.cpp  shader.comp  vulkan-basic-triangle.vcxproj
vulkan-practice/: .gitignore
vulkan-raytraced-triangle/: .gitignore  CMakeLists.txt  README.md  main.cpp  shaderCompile.bat
vulkan-raytraced-triangle/headers/: model.hpp
vulkan-raytraced-triangle/headers/components/: camera.hpp  transform.hpp
vulkan-raytraced-triangle/headers/core/: app.hpp  buffer.hpp  device.hpp  image.hpp  imageView.hpp  instance.hpp  memory.hpp  settings.hpp  shaderModule.hpp  types.hpp  window.hpp
vulkan-raytraced-triangle/headers/core/interfaces/: resource.hpp
vulkan-raytraced-triangle/headers/math/: mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
vulkan-raytraced-triangle/headers/utilities/: random.hpp
vulkan-raytraced-triangle/shaders/: aoMiss.rmiss  aoMiss.spv  bgMiss.rmiss  cHit.rchit  cHit.spv  raygen.rgen  raygen.spv
vulkan-raytraced-triangle/sources/: model.cpp
vulkan-raytraced-triangle/sources/components/: camera.cpp  transform.cpp
vulkan-raytraced-triangle/sources/core/: app.cpp  buffer.cpp  device.cpp  image.cpp  imageView.cpp  instance.cpp  memory.cpp  shaderModule.cpp  window.cpp
vulkan-raytraced-triangle/sources/math/: mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
vulkan-raytracing-basic/: .gitignore  CMakeLists.txt  README.md  main.cpp  teapot.mtl  tiny_obj_loader.h
vulkan-uniform-2-buffers-teapot/: main.cpp  vertex_input_vs.glsl  vulkan-basic-triangle.vcxproj
vulkan-uniform-buffer/: README.md  main.cpp  vertex_input_vs.glsl  vulkan-basic-triangle.vcxproj
vulkan-uniform-buffer-Trying-glsl2spv/: main.cpp  vulkan-basic-triangle.vcxproj
vulkan-uniform-buffer-teapot-normal-phong/: main.cpp  vertex_input_fs.glsl  vertex_input_fs.spv  vertex_input_vs.glsl  vertex_input_vs.spv  vulkan-basic-triangle.vcxproj
vulkanTest/: README.md  main.cpp  vulkan-basic-triangle.vcxproj
(+69 files in other folders)
